--- a/src/_includes/partials/components/columns.njk
+++ b/src/_includes/partials/components/columns.njk
@@ -10,20 +10,24 @@
                     {% if column.colImg | length !== 0 %}
                     <div class="col-top">
                         <div class="col-content centre-me-top">
-                            <img src="{% if column.colImg | first !== '/' %}/{% endif %}{{ column.colImg }}" class="icon-circle" />
+                            <img src="{% if column.colImg | length == 0 %}{% elif column.colImg | first !== '/' %}/{% endif %}{{ column.colImg }}" class="icon-circle" />
                         </div>
                     </div>
                     {% endif %}
+                    {% if column.colHeading | length !== 0 %}
                     <div class="col-mid">
                         <div class="col-content centre-me-top">
                             <h5 class="centre-me-top">{{ column.colHeading }}</h5>
                         </div>
                     </div>
+                    {% endif %}
+                    {% if column.colDescription | length !== 0 %}
                     <div class="col-bot">
                         <div class="col-content">
                             <p>{{ column.colDescription | safe }}</p>
                         </div>
                     </div>
+                    {% endif %}
                 </div>
             {% endfor %}
         </div>
