--- a/src/_includes/partials/components/plain.njk
+++ b/src/_includes/partials/components/plain.njk
@@ -3,4 +3,7 @@
         <h3>{{ pageSection.plainTextTitle | safe }}</h3>
     {% endif %}
     {{ pageSection.bodyContent | safe }}
+    <div class="lean-centre breath-top">
+    {{ pageSection.embedContent | safe }}
+    </div>
 </section>
