--- a/src/_includes/partials/global/site-foot.njk
+++ b/src/_includes/partials/global/site-foot.njk
@@ -8,7 +8,7 @@
             </div>
             <div class="col-80 nav centre-me">
                 <div class="navigation-container centre-me">
-                    <p>Made with love in Melbourne</p>
+                    <p>Made with love in Melbourne (◍•ᴗ•◍)❤</p>
                 </div>
             </div>
         </div>
