--- a/src/_includes/layouts/customPage.njk
+++ b/src/_includes/layouts/customPage.njk
@@ -15,6 +15,7 @@
             {% include "partials/components/columns.njk" %}            
         {% endif %}
         {% if pageSection.template == 'case-study-gallery' %}
+            {% set selectedCaseList = pageSection.caseList %}
             {% include "partials/components/case-study-caro.njk" %}            
         {% endif %}
         {% if pageSection.template == 'testimonial-gallery' %}
@@ -37,6 +38,7 @@
             {% include "partials/components/comparison-gallery.njk" %}            
         {% endif %}
         {% if pageSection.template == 'feature-content' %}
+            {% set selectedCaseList = pageSection.caseList %}
             {% include "partials/components/case-feature.njk" %}            
         {% endif %}
         {% if pageSection.template == 'metrics' %}
@@ -47,6 +49,9 @@
         {% endif %}
         {% if pageSection.template == 'mid-header' %}
             {% include "partials/components/heading.njk" %}            
+        {% endif %}
+        {% if pageSection.template == 'full-bleed-image' %}
+            {% include "partials/components/full-bleed-image.njk" %}            
         {% endif %}
     {% endfor %}
     </section>
