--- a/src/_includes/partials/components/testimonials.njk
+++ b/src/_includes/partials/components/testimonials.njk
@@ -1,3 +1,5 @@
+{% set testimonialStory = collections.testimonial %}
+{% if testimonialStory.length %}
 <section id="wrapper spaced">
 <section id="case-study-caro" class="case-column-version spaced-90 col-cream">
     <div class="case-study-left">
@@ -8,14 +10,14 @@
     </div>
     <div class="case-study-right">
         <div class="main-carousel case-caro-content" data-flickity='{ "wrapAround": true, "cellAlign": "left", "contain": true }'>
-            {% for story in testimonials.items %}
+            {% for story in testimonialStory %}
                 <div class="quote-cell carousel-cell col-yellow">
                     <div class="quote-cell-top">
-                        <p>{{ story.quote | safe }}</p> 
+                        <p>{{ story.data.quote | safe }}</p> 
                     </div>
                     <div class="quote-cell-bot">
-                        <h5>{{ story.name }}</h5>
-                        <p>{{ story.position }} - {{ story.company }}</p>
+                        <h5>{{ story.data.personName }}</h5>
+                        <p>{{ story.data.personPosition }} - {{ story.data.personCompany }}</p>
                     </div>
                 </div>
 
@@ -24,3 +26,4 @@
     </div>
 </section>
 </section>
+{% endif %}
