--- a/src/_includes/partials/components/1-col-text.njk
+++ b/src/_includes/partials/components/1-col-text.njk
@@ -1,4 +1,4 @@
-<section id="1-col-text" class="spaced-container">
+<section id="one-col-text" class="spaced-container">
     <div class="col-wrapper">
         <div class="col-item col-4 col-grey col-singular">
             {% if pageSection.colImage | length !== 0 %}
