--- a/src/_includes/partials/components/1-text-col.njk
+++ b/src/_includes/partials/components/1-text-col.njk
@@ -1,6 +1,6 @@
 
 
-<section id="1-col-text" class="spaced-container">
+<section id="one-col-text" class="spaced-container">
     <div class="col-wrapper">
         <div class="col-3quart">
             <div class="col-content centre-me-top">
