--- a/src/_includes/partials/components/testimonials.njk
+++ b/src/_includes/partials/components/testimonials.njk
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="case-study-right">
-        <div class="main-carousel case-caro-content" data-flickity='{ "wrapAround": true, "cellAlign": "left", "contain": true }'>
+        <div class="main-carousel case-caro-content shorter-caro" data-flickity='{ "wrapAround": true, "cellAlign": "left", "contain": true }'>
             {% for story in testimonialStory %}
                 <div class="quote-cell carousel-cell col-yellow">
                     <div class="quote-cell-top">
