--- a/src/_includes/layouts/media.njk
+++ b/src/_includes/layouts/media.njk
@@ -7,7 +7,7 @@
   {{ content | safe }}
 <p class="[ intro__meta ] [ text-500 leading-tight ]">
   {% if date %}
-    <time datetime="{{ date | w3DateFilter }}" class="dt-published">{{ date | dateFilter }}</time>
+    <time datetime="{{ dateText | w3DateFilter }}" class="dt-published">{{ dateText | dateFilter }}</time>
   {% endif %}
   <span>— {{ helpers.getReadingTime(content) }} minute read</span>
 </p>
