--- a/src/_includes/partials/components/case-study-caro.njk
+++ b/src/_includes/partials/components/case-study-caro.njk
@@ -18,15 +18,15 @@
     {% endif %}
     {% if featuredCases.length %}
     <div class="case-study-bot">
-        <div class="main-carousel case-caro-content" data-flickity='{ "wrapAround": true, "cellAlign": "left", "contain": true }'>
+        <div class="main-carousel case-caro-content longer-caro" data-flickity='{ "wrapAround": true, "cellAlign": "left", "contain": true }'>
             {% for item in featuredCases %}
                 {% if pageSection.caseFilter | length !== 0 %}
                     {% if item.data.featureToggle == true and item.data.caseFeatureFilter == pageSection.caseFilter %}
                     <div class="gallery-cell carousel-cell" style="background-image: url(/{{ item.data.featuredImage }})">
                         <div class="case-caro-desc">
-                            <a href="linkURL" class="discreet-link"><h5>{{ item.data.title }}</h5></a>
-                            <p>{{ item.data.whatStatement }}</p>
                             {% set linkURL = item.url %}
+                            <a href="{{linkURL}}" class="discreet-link"><h5>{{ item.data.title }}</h5></a>
+                            <p>{{ item.data.whatStatement }}</p>
                             {% set linkText = 'Finish the story' %}
                             {% include "partials/components/link.njk" %}
                         </div>
@@ -36,7 +36,8 @@
                     {% if item.data.featureToggle == true %}
                     <div class="gallery-cell carousel-cell" style="background-image: url(/{{ item.data.featuredImage }})">
                         <div class="case-caro-desc">
-                            <a href="linkURL" class="discreet-link"><h5>{{ item.data.title }}</h5></a>
+                        {% set linkURL = item.url %}
+                            <a href="{{linkURL}}" class="discreet-link"><h5>{{ item.data.title }}</h5></a>
                             <p>{{ item.data.whatStatement }}</p>
                             {% set linkURL = item.url %}
                             {% set linkText = 'Finish the story' %}
