--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -9,7 +9,7 @@
   <script>document.documentElement.classList.remove('no-js');</script>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Raleway:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
   <style>{% include "css/global.css" %}</style>
-  <title>{{ title }}</title>
+  <title>{{ title }} | {{ site.name }}</title>
   <link rel="stylesheet" href="/_includes/css/flickity.css">
 </head>
 <body>
