--- a/src/_includes/partials/components/deliverables.njk
+++ b/src/_includes/partials/components/deliverables.njk
@@ -1,23 +1,28 @@
-{% set testimonialStory = collections.deliverables %}
-{% if testimonialStory.length %}
+{% set deliverableStory = collections.deliverable %}
+{% if deliverableStory.length %}
 <section id="wrapper spaced">
 <section id="case-study-caro" class="case-column-version spaced-90 col-cream">
     <div class="case-study-left">
         <div class="heading-inline-wrapper">
-            <h3>{{ pageSection.testimonialGalleryTitle }}</h3>
-            <p>{{ pageSection.testimonialDescription }}</p>
+            <h3>{{ pageSection.deliverableGalleryTitle }}</h3>
+            <p>{{ pageSection.deliverableDescription }}</p>
         </div>
     </div>
     <div class="case-study-right">
         <div class="main-carousel case-caro-content shorter-caro" data-flickity='{ "wrapAround": true, "cellAlign": "left", "contain": true }'>
-            {% for story in testimonialStory %}
+            {% for story in deliverableStory %}
                 <div class="quote-cell carousel-cell col-yellow">
                     <div class="quote-cell-top">
-                        <p>{{ story.data.quote | safe }}</p> 
+                        <h5>{{ story.data.deliverableOutcome }}</h5>
                     </div>
                     <div class="quote-cell-bot">
-                        <h5>{{ story.data.personName }}</h5>
-                        <p>{{ story.data.personPosition }} - {{ story.data.personCompany }}</p>
+                        <p>by delivering...</p>
+                        <p>{{ story.data.deliverableOutputs | safe }}</p> 
+                        </br>
+                        <ul>
+                            <li><p>{{ story.data.deliverableSkills }}</p></li>
+                        </ul>
+                        <p>{{ story.data.deliverableFun | safe }}</p> 
                     </div>
                 </div>
 
