removed wide gaps

--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -193,6 +193,11 @@ section, .breath-top {
     text-align: left;
 }
 
+.no-top-margin-ul ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .col {
     display: inline-flex;
     width: 100%;
