--- a/src/_includes/partials/components/deliverables.njk
+++ b/src/_includes/partials/components/deliverables.njk
@@ -16,10 +16,11 @@
                         <b>{{ story.data.deliverableOutcomeTitle | safe }}</b>
                         <p>{{ story.data.deliverableOutcome | safe }}</p>
                     </div>
-                    <div class="quote-cell-bot">
+                    <div class="quote-cell-bot no-top-margin-ul">
                         <b>{{ story.data.deliverableOutputsTitle | safe }}</b> 
                         <p>{{ story.data.deliverableOutputs | safe }}</p> 
-                        </br>
+                    </div>
+                    <div class="quote-cell-bot no-top-margin-ul">
                         <b>{{ story.data.deliverableSkillsTitle | safe }}</b>
                         <p>{{ story.data.deliverableSkills | safe }}</p>
                     </div>
