--- a/src/_includes/partials/components/4-col.njk
+++ b/src/_includes/partials/components/4-col.njk
@@ -1,16 +1,16 @@
-<section id="wrapper spaced">
-<section id="metrics" class="spaced-90 col-cream">
+<section id="wrapper">
+<section id="metrics" class="spaced-container">
     <div class="col-wrapper">
         {% for column in pageSection.4colLoop %}
-            <div class="col-item col-{{ pageSection.4colLoop | length }}">
+            <div class="col-item col-3">
                 <div class="col-top">
                     <div class="col-content centre-me-top">
-                        <h2>{{ column.4colTitle }}</h2>
+                        <h5>{{ column.4colTitle }}</h5>
                     </div>
                 </div>
                 <div class="col-bot">
                     <div class="col-content">
-                        <p>{{ column.4colDesc }}</p>
+                        <p>{{ column.4colDesc | safe }}</p>
                     </div>
                 </div>
             </div>
