--- a/src/_includes/partials/components/4-col.njk
+++ b/src/_includes/partials/components/4-col.njk
@@ -1,5 +1,5 @@
 <section id="wrapper">
-<section id="metrics" class="spaced-container">
+<section id="4-col" class="no-spaced-container">
     <div class="col-wrapper">
         {% for column in pageSection.4colLoop %}
             <div class="col-item col-3">
