--- a/src/_includes/layouts/customPage.njk
+++ b/src/_includes/layouts/customPage.njk
@@ -50,6 +50,9 @@
         {% if pageSection.template == '4-col' %}
             {% include "partials/components/4-col.njk" %}            
         {% endif %}
+        {% if pageSection.template == 'period-table' %}
+            {% include "partials/components/period-table.njk" %}            
+        {% endif %}
         {% if pageSection.template == 'image-gallery' %}
             {% include "partials/components/image-gallery.njk" %}            
         {% endif %}
