--- a/src/_includes/partials/components/4-col.njk
+++ b/src/_includes/partials/components/4-col.njk
@@ -1,5 +1,4 @@
-<section id="wrapper">
-<section id="4-col" class="no-spaced-container">
+<section id="wrapper 4-col" class="no-spaced-container pt-0">
     <div class="col-wrapper">
         {% for column in pageSection.4colLoop %}
             <div class="col-item col-3">
@@ -16,5 +15,4 @@
             </div>
         {% endfor %}
     </div>
-</section>
 </section>
