--- a/src/_includes/css/global.css
+++ b/src/_includes/css/global.css
@@ -92,6 +92,10 @@ p.busy-text, li.busy-text, .busy-text > * {
     padding-bottom: 0;
 }
 
+.pt-0 {
+    padding-top: 0!important;
+}
+
 
 /* Colours */
 :root {
